--- a/docker/.env
+++ b/docker/.env
@@ -14,6 +14,7 @@ INSTANCE_DOMAIN=
 PROJECT_STACK_NAME=
 EXTERNAL_HTTP_PORT=
 DEFAULT_DOCKER_REGISTRY=
+DEFAULT_DOCKER_TAG=
 
 # Docker Images
 # -------------
