--- a/.github/workflows/build-images.yml
+++ b/.github/workflows/build-images.yml
@@ -5,7 +5,7 @@ on:
         branches:
             - master
 env:
-  IMAGE_VERSION: 3.4.0-dev
+  IMAGE_VERSION: latest
 jobs:
   build:
     name: Builds Docker images
