--- a/server/setup.cfg
+++ b/server/setup.cfg
@@ -3,6 +3,7 @@ source = openslides
 omit =
     openslides/core/management/commands/*.py
     openslides/users/management/commands/*.py
+    openslides/core/export.py
 
 [coverage:html]
 directory = personal_data/tmp/htmlcov
