--- a/docker/services.env
+++ b/docker/services.env
@@ -22,6 +22,8 @@ AUTH_HOST=auth
 AUTH_PORT=9004
 CACHE_HOST=cache
 CACHE_PORT=6379
+ICC_REDIS_HOST=message-bus
+ICC_REDIS_PORT=6379
 
 MEDIA_HOST=media
 MEDIA_PORT=9006
