Added icc image

--- a/.github/workflows/build_images.yml
+++ b/.github/workflows/build_images.yml
@@ -37,6 +37,9 @@ jobs:
           - name: openslides-auth
             directory: openslides-auth-service
 
+          - name: openslides-icc
+            directory: openslides-icc-service
+
           - name: openslides-media
             directory: openslides-media-service
 
