Make database table configurable through .env

--- a/docker/.env
+++ b/docker/.env
@@ -103,6 +103,7 @@ DATABASE_HOST=
 DATABASE_PASSWORD=
 DATABASE_PORT=
 DATABASE_USER=
+DATABASE_NAME=
 MEDIAFILE_DATABASE_NAME=
 MEDIAFILE_DATABASE_USER=
 MEDIAFILE_DATABASE_PASSWORD=
