--- a/.github/workflows/models.yml
+++ b/.github/workflows/models.yml
@@ -2,32 +2,10 @@
 name: Validate models.yml and initial and example data
 on: [push, pull_request]
 env:
-  PYTHON_VERSION: 3.8.5
-  GO_VERSION: 1.16
+  PYTHON_VERSION: 3.9.6
 jobs:
   validate-models:
     name: Validate models.yml
-    runs-on: ubuntu-latest
-    steps:
-    - name: Set up Go
-      uses: actions/setup-go@v1
-      with:
-        go-version: ${{ env.GO_VERSION }}
-
-    - name: Check out code
-      uses: actions/checkout@v2
-
-    - name: Build validator
-      run: go build
-      working-directory: docs/modelsvalidator
-      env:
-        GO111MODULE: on
-
-    - name: Validate models.yml
-      run: docs/modelsvalidator/modelsvalidator docs/models.yml
-
-  validate-data:
-    name: Validate example-data.json and initial-data.json
     runs-on: ubuntu-latest
     steps:
     - name: Check out code
@@ -39,9 +17,32 @@ jobs:
         python-version: ${{ env.PYTHON_VERSION }}
 
     - name: Install requirements
-      working-directory: docs/datavalidator
-      run: pip install -U -r requirements.txt
+      run: pip install -U -r docs/modelsvalidator/requirements.txt
 
-    - name: Validate
-      working-directory: docs/datavalidator
-      run: python check_json.py
+    - name: Validate models.yml
+      working-directory: docs/modelsvalidator
+      run: python validate.py
+
+  validate-data:
+    name: Validate example-data.json and initial-data.json
+    runs-on: ubuntu-latest
+    steps:
+    - name: Check out code
+      uses: actions/checkout@v2
+
+    - name: Checkout backend submodule
+      run: git submodule update --init openslides-backend/
+
+    - name: Set up Python
+      uses: actions/setup-python@v2
+      with:
+        python-version: ${{ env.PYTHON_VERSION }}
+
+    - name: Install requirements
+      run: pip install -U -r openslides-backend/cli/requirements.txt
+
+    - name: set pythonpath
+      run: echo "PYTHONPATH=openslides-backend" >> $GITHUB_ENV
+
+    - name: Validate example-data.json
+      run: python openslides-backend/cli/check_json.py docs/example-data.json docker/initial-data.json
